# TPmedev

./: .gitignore  CMakeLists.txt  Init  README.md  init.txt
include/: bateau.h  case.h  constante.h  grille.h  joueur.h  ordi.h  partie.h  utilisateur.h
src/: bateau.cpp  case.cpp  grille.cpp  joueur.cpp  main.cpp  ordi.cpp  partie.cpp  utilisateur.cpp
tests/: gtests.cpp
